--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -44,11 +44,14 @@
   .itemsNav {
     color: #f6ffe0;
     padding: 10px 0;
-    margin: 0 20px;
+    margin: 0 15px;
     font-size: 14px;
     text-transform: uppercase;
     font: normal normal 300 14px/18px Europa;
   }
+
+  .menuItems li:first-child .itemsNav{margin-left: 0;}
+  .social li:last-child .itemsNav{margin-right: 0;}
   
   .itemsNav:hover {cursor: pointer; transition: 1s;}
   .menuItems .itemsNav:hover {border-bottom: 1px solid #F6FFE0; }
