ajustes varios de la home en cuanto a estilos. Toque Hero, y Features, incluyendo sus hijos. Agregué grid en algunas secciones e inner para setear el max-width de todo

--- a/components/CardFeature/cardFeature.module.css
+++ b/components/CardFeature/cardFeature.module.css
@@ -1,68 +1,76 @@
 /* reset button */
 .card button {
-    border: none;
-    margin: 0;
-    padding: 0;
-    width: auto;
-    overflow: visible;
+  border: none;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  overflow: visible;
 
-    background: transparent;
+  background: transparent;
 
-    /* inherit font & color from ancestor */
-    color: inherit;
-    font: inherit;
+  /* inherit font & color from ancestor */
+  color: inherit;
+  font: inherit;
 
-    /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
-    line-height: normal;
+  /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
+  line-height: normal;
 
-    /* Corrects font smoothing for webkit */
-    -webkit-font-smoothing: inherit;
-    -moz-osx-font-smoothing: inherit;
+  /* Corrects font smoothing for webkit */
+  -webkit-font-smoothing: inherit;
+  -moz-osx-font-smoothing: inherit;
 
-    /* Corrects inability to style clickable `input` types in iOS */
-    -webkit-appearance: none;
+  /* Corrects inability to style clickable `input` types in iOS */
+  -webkit-appearance: none;
 }
 
 /* Remove excess padding and border in Firefox 4+ */
 .card button::-moz-focus-inner {
-    border: 0;
-    padding: 0;
+  border: 0;
+  padding: 0;
 }
 /* fin reset button */
 
-.card{
-    font: normal normal 100 33px/15px Europa;
+.card {
+  font: normal normal 100 33px/15px Europa;
+  padding: 30px;
+  border-radius: 15px;
+  display: flex;
+  align-items: flex-end;
+  box-shadow: 0px 3px 6px #00000029;
+  background-size: cover;
 }
 
-.textAndButton{
-    margin-top: 142px;
-    margin-left: 22px;
+
+.card:nth-of-type(3) .textAndButton {
+  text-align: right;
+  padding-right: 10px;
+  width: 100%;
 }
 
-.card:nth-of-type(3) .textAndButton{
-    text-align: right;
-    padding-right: 10px;
+.card:nth-of-type(1) {
+  background-image: url('../../public/assets/feature-1.jpg');
+  grid-column-start: 2;
+  grid-column-end: 5;
 }
 
-.card:nth-of-type(1){
-    background-image: url('../../public/assets/feature-1.png');
-    width: 290px;
-    height: 290px;
+.card:nth-of-type(2) {
+  background-image: url('../../public/assets/feature-2.jpg');
+  grid-column-start: 5;
+  grid-column-end: 9;
 }
 
-.card:nth-of-type(2){
-    background-image: url('../../public/assets/feature-2.png');
-    width: 386px;
-    height: 290px;
+.card:nth-of-type(3) {
+  background-image: url('../../public/assets/feature-3.jpg');
+  grid-column-start: 9;
+  grid-column-end: 12;
 }
 
-.card:nth-of-type(3){
-    background-image: url('../../public/assets/feature-3.png');
-    width: 272px;
-    height: 272px;
+.card a {
+  color: #95AB63;
+  font: normal normal 100 15px/15px Europa;
 }
 
-.card button{
-    color: #cdf46c;
-    font: normal normal 100 15px/15px Europa;
-}
+.card a:hover {cursor: pointer; text-decoration: underline;}
+
+.card p {font-size: 25px; color: #10222B; line-height: 1; margin-bottom: 5px;}
+
