--- a/components/ItemBenefits/itembenefits.module.css
+++ b/components/ItemBenefits/itembenefits.module.css
@@ -26,7 +26,8 @@
   font-style: normal;
   font-size: 25px;
   color: #10222b;
-  margin-bottom: 0.5em;
+  margin-bottom: 5px;
+  margin-top: 0;
 }
 
 .itemBenefit p {
