--- a/components/Hero/hero.module.css
+++ b/components/Hero/hero.module.css
@@ -41,23 +41,22 @@
   background-image: url('../../public/assets/hero.png');
   box-shadow: inset 0px 10px 560px 20px black;
   width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  height: calc(100vh + 145px);
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
 }
 
 .cta {
+  position: relative;
   display: flex;
   flex-direction: column;
   text-align: center;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   z-index: 0;
-  height: 250px;
+  height: 100vh;
+  width: 100%;
 }
 
 .overlay {
@@ -83,6 +82,7 @@
   font-size: 40px;
   line-height: 45px;
   font-weight: 200;
+  margin: 30px 0;
 }
 
 .cta .btn {
