--- a/components/HeroProducts/heroProducts.module.css
+++ b/components/HeroProducts/heroProducts.module.css
@@ -13,7 +13,6 @@
     color: #f6ffe0;
     margin-block-end: 0em;
     margin-block-start: 0em;
-    margin-top: 1.3em;
 }
 
 .subtitle {
@@ -30,6 +29,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    height: 100%;
+    justify-content: center;
 }
 
 .overlay {
