--- a/components/Counter/counter.module.css
+++ b/components/Counter/counter.module.css
@@ -8,17 +8,14 @@
 
 .plusminus{
     color: #BDD684;
-    font-size: 25px;
+    font-size: 0px;
     font-weight: bolder;
     border: 2px solid #BDD684;
      -moz-border-radius: 50%;
      -webkit-border-radius: 50%;
      border-radius: 50%;
     margin: 1em;
-}
-
-.plusminus p{
-    padding: 3px 12px;
+    width:30px;
 }
 
 .plusminus:hover{
