--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@ body {
     
   overflow-x: hidden;
   scroll-behavior: smooth;
+  background-color: #F9F4EF;
 }
 
 a {
@@ -27,14 +28,4 @@ p,a,ul,li {
   max-width: 1136px;
   margin: auto;
   position: relative;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: #F9F4EF;
-  }
 }
