--- a/components/InfoCheckout/infoCheckout.module.css
+++ b/components/InfoCheckout/infoCheckout.module.css
@@ -23,3 +23,13 @@
 .container form select{
     border-bottom:2px solid #8AB16E;
 }
+
+.container form div{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 90px;
+}
+.container form div input{
+    margin: 0px;
+    width: 45%;
+}
