--- a/components/Counter/counter.module.css
+++ b/components/Counter/counter.module.css
@@ -1,25 +1,4 @@
-.counter{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Europa';
-    font-weight: lighter;
-}
-
-.plusminus{
-    color: #BDD684;
-    font-size: 0px;
-    font-weight: bolder;
-    border: 2px solid #BDD684;
-     -moz-border-radius: 50%;
-     -webkit-border-radius: 50%;
-     border-radius: 50%;
-    margin: 1em;
-    width:30px;
-}
-
-.plusminus:hover{
-    background-color: #BDD684;
-    color: white;
-    cursor: pointer;
-}
+.counter{display:flex;justify-content:center;align-items:center;font-family:Europa;font-weight:lighter}
+.plusminus{color:#bdd684;font-size:0;font-weight:bolder;border:5px solid #bdd684;-moz-border-radius:50%;-webkit-border-radius:50%;border-radius:50%;margin:1em;width:50px;height:50px}
+.plusminus:hover{background-color:#bdd684;color:#fff;cursor:pointer}
+.counter p{font-size:1.5em;margin:0 1em; width: 15px;}
