Se agregó notificación toast al añadir un producto al carrito y se hizo un conditional render para mostrar el boton para ir al carrito

--- a/components/Counter/counter.module.css
+++ b/components/Counter/counter.module.css
@@ -2,3 +2,5 @@
 .plusminus{color:#bdd684;font-size:0;font-weight:bolder;border:5px solid #bdd684;-moz-border-radius:50%;-webkit-border-radius:50%;border-radius:50%;margin:1em;width:50px;height:50px}
 .plusminus:hover{background-color:#bdd684;color:#fff;cursor:pointer}
 .counter p{font-size:1.5em;margin:0 1em; width: 15px;}
+.counter_btn{color:#f6ffe3;background-color:#95ab63;border:2px solid #95ab63;font-size:25px;padding:17px 57px;border-radius:15px;transition:.2s; margin-right: 10px;}
+.counter_btn:hover{background-color:#f6ffe3;color:#95ab63;cursor:pointer}
