--- a/components/InfoChekoutItem/infoChekout.module.css
+++ b/components/InfoChekoutItem/infoChekout.module.css
@@ -44,3 +44,19 @@
     background: none;
     transition: 0.2s;
   }
+
+  .modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .modal h2 {
+    margin: 0;
+  }
+
+  .modal p {
+    margin: 20px 0
+  }
