--- a/components/ProductCard/productCard.module.css
+++ b/components/ProductCard/productCard.module.css
@@ -7,7 +7,17 @@
     width: 300px;
     height: 300px;
     background-color: #fff;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    border-radius: 15px;
+    transition: 0.2s;
 }
+
+.productCardImg:hover{
+    transform: scale(1.1);
+    transition: 0.2s;
+}
+
+
 .productCard .precio{
     font-weight: bold;
     color: #95AB63;
@@ -31,6 +41,8 @@
     margin: .5em 0em;
 
 }
+
+
 .btn {
     background-color: #95ab63;
     padding: 10px 20px;
