--- a/components/InfoChekoutItem/infoChekout.module.css
+++ b/components/InfoChekoutItem/infoChekout.module.css
@@ -1,6 +1,6 @@
 .container{
   background-color: white;
-  width: 30%;
+  width: 45%;
   height: fit-content;
   display: flex;
   justify-content: center;
@@ -60,3 +60,14 @@
   .modal p {
     margin: 20px 0
   }
+
+@media screen and (max-width: 768px) {
+  .container {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    width: 100%;
+  }
+  .containerTotal{
+    width: 100%;
+  }
+}
