--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,3 +30,9 @@ p,a,ul,li {
   position: relative;
 }
 .carousel {width: 100%;}
+
+@media (max-width: 1200px) {
+  .inner {
+    max-width: 90%;
+  }
+}
