--- a/components/CardFeature/cardFeature.module.css
+++ b/components/CardFeature/cardFeature.module.css
@@ -1,34 +1,23 @@
-/* reset button */
+
 .card button {
   border: none;
   margin: 0;
   padding: 0;
   width: auto;
   overflow: visible;
-
   background: transparent;
-
-  /* inherit font & color from ancestor */
   color: inherit;
   font: inherit;
-
-  /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
   line-height: normal;
-
-  /* Corrects font smoothing for webkit */
   -webkit-font-smoothing: inherit;
   -moz-osx-font-smoothing: inherit;
-
-  /* Corrects inability to style clickable `input` types in iOS */
   -webkit-appearance: none;
 }
 
-/* Remove excess padding and border in Firefox 4+ */
 .card button::-moz-focus-inner {
   border: 0;
   padding: 0;
 }
-/* fin reset button */
 
 .card {
   font: normal normal 100 33px/15px Europa;
@@ -74,3 +63,33 @@
 
 .card p {font-size: 25px; color: #10222B; line-height: 1; margin-bottom: 5px;}
 
+@media screen and (max-width: 768px) {
+  .card {
+    font-size: 20px;
+    padding: 20px;
+    background-image: none !important;
+  }
+  .card:nth-of-type(1) {
+    grid-column-start: 1;
+    grid-column-end: 13;
+    background-color: #ddd;
+  }
+  
+  .card:nth-of-type(2) {
+    grid-column-start: 1;
+    grid-column-end: 13;
+  }
+  
+  .card:nth-of-type(3) {
+    grid-column-start: 1;
+    grid-column-end: 13;
+    background-color: #ddd;
+  }
+
+  .card:nth-of-type(3) .textAndButton {
+    text-align: left;
+    padding-right: 0;
+    width: 100%;
+  }
+  
+}
