--- a/components/CartItem/cartitem.module.css
+++ b/components/CartItem/cartitem.module.css
@@ -7,6 +7,7 @@
     margin: 1em 0px;
     font-family: 'Europa';
     font-size: 30px;
+    width: 100%;
 }
 
 .name{
@@ -35,3 +36,36 @@
     color:white;
     border-radius: 50%;
 }
+
+@media screen and (max-width: 768px) {
+    .cont_cart{
+        font-size: 20px;
+        flex-wrap: wrap;
+        margin: 0 !important;
+        width: 100%;
+        max-width: none;
+    }
+
+    .cont_cart span {
+        display: none !important;
+    }
+    
+    .cont_cart p{
+        width: 10%;
+        margin: 0 5px;
+        text-align: left;
+    }
+    .name {
+        width: 45% !important;
+        margin: 0 !important;
+    }
+    .price{
+        margin: 0 !important;
+        text-align: left !important;
+        width: 30% !important;
+    }
+    .close{
+        width: 10% !important;
+    }
+}
+    
