--- a/components/Features/features.module.css
+++ b/components/Features/features.module.css
@@ -59,3 +59,19 @@
   position: relative;
   padding-bottom: 120px;
 }
+
+@media screen and (max-width: 768px) {
+  .bonsaimg{
+    display: none;
+  }
+  .features_container{
+    padding-top: 25px;
+  }
+  .features_section{
+    padding-top: 50px;
+  }
+  .section_title{
+    font-size: 30px;
+    margin-bottom: 15px;
+  }
+}
