--- a/components/HeroProducts/heroProducts.module.css
+++ b/components/HeroProducts/heroProducts.module.css
@@ -39,3 +39,16 @@
     position: absolute;
     background-color: rgba(0, 0, 0, .46);
   }
+
+  @media screen and (max-width: 768px) {
+    .heroimg {
+      height: 200px !important;
+    }
+    .title{
+        font-size: 30px;
+    }
+    .subtitle {
+      max-width: 100%;
+      font-size: 20px;
+    }
+}
