--- a/components/InfoCheckout/infoCheckout.module.css
+++ b/components/InfoCheckout/infoCheckout.module.css
@@ -1,3 +1,7 @@
+.container{
+    width: 55%;
+}
+
 .container form{
     display: flex;
     flex-direction: column;
@@ -30,4 +34,15 @@
 .container form div input{
     margin: 0px;
     width: 45%;
+}
+@media screen and (max-width: 768px) {
+    .container {
+        width: 100%;
+    }
+    .container form{
+        margin-bottom: 0px;
+    }
+    .container form input, .container form select, .container form div{
+        margin-bottom: 40px;
+    }
 }
