--- a/containers/CartContainer/cartcontainer.module.css
+++ b/containers/CartContainer/cartcontainer.module.css
@@ -6,11 +6,13 @@
 
 .total {
   text-align: end;
+  margin-top: 15px;
 }
 
 .total span {
   color: #95ab63;
 }
+
 
 .btn {
   background-color: #95ab63;
@@ -45,4 +47,23 @@
 .center{
   text-align: center;
   padding: 2em;
+}
+
+@media screen and (max-width: 768px) {
+  .cart_container {
+    min-height: calc(100vh - 72px);
+  }
+  .center{
+    min-height: calc(100vh - 72px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 0;
+  }
+
+  .center h1 {
+    margin-top: 0;
+  }
+
+
 }
