--- a/containers/ProductDescriptionContainer/productdescriptioncontainer.module.css
+++ b/containers/ProductDescriptionContainer/productdescriptioncontainer.module.css
@@ -4,3 +4,10 @@
 .prod_desc_container>p{font-size:20px}
 .categories_container{display:flex;width:100%;justify-content:flex-start}
 .btn_counter_container{display:flex;justify-content:flex-start;align-items:center;width:100%}
+
+@media screen and (max-width: 768px) {
+  .btn_counter_container{
+    flex-direction: column-reverse;
+    align-items:center;
+  }
+}
